<resources>
    <string name="app_name">HackAndroid</string>
    <string name="title_activity_fake_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="digits_verify">
        <Data>
            <![CDATA[0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ.$@#,_-<>]]>
        </Data>
    </string>
    <string name="unknow_exception">未知错误，请联系客服</string>
    <string name="loginUserNameHint">输入登录账号</string>
    <string name="loginPasswordHint">输入密码</string>
    <string name="loginRememberMe">记住密码</string>
    <string name="forget_password_obelize">忘记密码？</string>
    <string name="forget_password">忘记密码</string>
    <string name="loginSubmit">登\u0020\u0020录</string>
    <string name="cusomter_service">服务热线:\u0020\u00201010 9888</string>
    <string name="login_error_username">账号格式错，请输入手机号或邮箱账号</string>
    <string name="format_error_password">密码格式错误(6–20个英文字母或数字组成)</string>
    <string name="login_error_json">数据解析异常，请联系客服</string>
    <string name="login_account_unexist">账户不存在</string>
    <string name="login_unknow_status">登录失败,请联系客服</string>
    <string name="login_account_auditing">账户审核中</string>
    <string name="login_wrongpassword">密码错误，请重新输入</string>
    <string name="account_forbidden">账号被禁用</string>
    <string name="tab_message">消息</string>
    <string name="tab_me">我</string>
    <string name="message">消息</string>
    <string name="phone_number_hint">手机号码</string>
    <string name="input_pwd_reset_tip">登录账号默认为商户手机号，部分商户登录账号格式为“手机号#01”</string>
    <string name="phone_null">手机号码不能为空</string>
    <string name="phone_error">手机号码格式错误</string>
    <string name="input_login_account">请输入您的登录账号</string>
    <string name="login_account_error">登录账号非法</string>
    <string name="sended_verirycode_tip">我们已发送验证码短信到您的手机%1$s，请输入短信中的验证码</string>
    <string name="input_verirycode_hint">请输入验证码</string>
    <string name="verify_success">验证码已发送,请查看手机</string>
    <string name="input_verify_tip">请先获取验证码</string>
    <string name="input_verify_tip_format">验证码格式不对</string>
    <string name="verify_moblie_changemobile">验证手机号码</string>
    <string name="reset_idcard_tips">身份证号码(字母请用*代替)</string>
    <string name="reset_idcard_tips2">为了确认您的身份，请提供商户在开通服务时所登记的身份证号码。（字母请用*代替）</string>
    <string name="idcard_null">身份证不能为空</string>
    <string name="idcard_error">身份证格式错误，请输入18位二代身份证号</string>
    <string name="verifying">验证中……</string>
    <string name="idcard_verify_fail">身份证号码不正确，请重新输入</string>
    <string name="password_again">再次确认密码</string>
    <string name="reset_pwd_title">修改密码</string>
    <string name="reset_pwd_fail">重置密码失败</string>
    <string name="pwd_cfmpwd_unequal">你两次输入的密码不一致</string>
    <string name="pwd_empty_tip">密码不能为空</string>
    <string name="cfm_empty_tip">确认密码不能为空</string>
    <string name="password_format">密码由6–20位英文或数字组成</string>
    <string name="change_success">修改成功，请重新登录</string>
    <string name="device_602_type">通刷宝系列</string>
    <string name="device_603_type">603系列刷卡器</string>
    <string name="choice_device_type">选择设备类型</string>
    <string name="change_type_audio">切换音频</string>
    <string name="change_type_bt">切换蓝牙</string>
    <string name="bt_device_connect_failed">蓝牙连接失败</string>
    <string name="sign_to_agree">已阅读并同意开通</string>
    <string name="what_is_tzero">什么是T+0到账？</string>
    <string name="what_is_szero">什么是T+0实时到账？</string>
    <string name="uploading_signal">正在上传申请协议</string>
    <string name="tzero_open_login_again">开通成功</string>
    <string name="please_plug_device">请插入设备</string>
    <string name="audio_wait_tip">注意事项\n1.请保持网络通畅\n2.请将刷卡器插入耳机孔\n3.请保持刷卡器有充足电量</string>
    <string name="bluetooth_scan_tip">
        注意事项\n1.请保持设备开机且电量充足\n2.手机与设备请保持在5米范围内\n3.请保持手机网络顺畅\n4.请打开手机蓝牙开关\n5.蓝牙扫描设备需要定位权限
    </string>
    <string name="bluetooth_disconnect_tip">
        您可以尝试\n1.请重启手机蓝牙\n2.检查设备是否已开机\n3.检查手机网络是否稳定\n4.在手机设置中，取消蓝牙配对，并重新开启应用
    </string>
    <string name="bluetooth_printer_connect_tips">
        1.请保持打印机开机且电量充足\n2.手机与打印机请保持在5米内\n3.请保持手机网络顺畅\n4.请打开蓝牙开关
    </string>
    <string name="opening_bluetooth">正在开启蓝牙</string>
    <string name="bt_scan">点击重新扫描</string>
    <string name="bt_scaning">搜索中</string>
    <string name="auth_success">认证成功</string>
    <string name="auth_box_fail">认证失败</string>
    <string name="box_connected">建立连接</string>
    <string name="box_disconnected">断开连接</string>
    <string name="connect_audio_failed">设备异常</string>
    <string name="connect_bt_failed">蓝牙连接失败</string>
    <string name="audio_plug_in">音频设备插入</string>
    <string name="audio_plug_out">音频设备拔出</string>
    <string name="box_authing">认证中</string>
    <string name="swipe_card_tips">您本次消费:</string>
    <string name="swipe_card_instruction_one_800">
        刷卡时保持设备稳定连接，银行卡卡面朝上，平稳匀速刷卡。若遇刷卡无反应或提示刷卡失败，请稍后重新刷卡即可
    </string>
    <string name="swipe_card_instruction_two_800">插卡时将芯片部分朝上插入卡槽，若遇插卡无反应或提示插卡失败，请重新插卡</string>
    <string name="loading_wait">请稍候\u2026</string>
    <string name="toastbox_success">刷卡成功</string>
    <string name="box_downgrade_trading">请插入IC卡进行交易，纯磁条卡请再次刷卡</string>
    <string name="repeal_trans_tip">撤销交易:</string>
    <string name="query_yuer">余额查询</string>
    <string name="swipe_card">请刷卡</string>
    <string name="swipe_card_plug_card">请刷卡或插卡</string>
    <string name="click_to_back">点击任意位置返回</string>
    <string name="swip_tip1">持金融IC复合卡（含芯片与磁条）在POS上使用时将禁止刷磁条，只能使用芯片交易</string>
    <string name="swip_tip2">温馨提示：如果纯磁条卡被误判为IC复合卡，请再次刷卡即可进行交易</string>
    <string name="toastbox_failure">刷卡失败,请重刷</string>
    <string name="swipe_card_global_currency_title">选择交易币种</string>
    <string name="swipe_card_global_currency_tips_en">Please let the cardholder choose the transaction currency.</string>
    <string name="swipe_card_global_currency_tips_zh">请持卡人选择交易币种</string>
    <string name="swipe_card_global_currency_rate_en" formatted="false">Exchange rate: 1%$1s = %$2sCNY</string>
    <string name="swipe_card_global_currency_rate_zh" formatted="false">汇率: 1%$1s = %$2s人民币</string>
    <string name="tzero_transfer">T+0今天到账</string>
    <string name="tzero_transfer_soon">S+0实时到账</string>
    <string name="balance_query">余额查询</string>
    <string name="amount_integer_format">¥%1$s</string>
    <string name="amount_decimal_format">.%1$s</string>
    <string name="password_cycle">●</string>
    <string name="merchant_confirm_sign">商家已确认签名与卡背面的签名一致</string>
    <string name="resignature">重新签名</string>
    <string name="sign_hint">消费者请在此签名</string>
    <string name="sign_notice">本人确认以上交易,同意将其计入本卡账户</string>
    <string name="merchant_confirm_signature">商家确认签名</string>
    <string name="payment_repeal_tips">您本次撤销</string>
    <string name="payment_tips">您本次消费</string>
    <string name="trading_money">%1$s元</string>
    <string name="build_connect">建立连接</string>
    <string name="upload_paydata">上传加密数据</string>
    <string name="second_with_kuohao">(%1$s秒)</string>
    <string name="second_without_kuohao">%1$s秒</string>
    <string name="waiting_pay_result">获取交易结果</string>
    <string name="input_wrong_password">输入密码不正确</string>
    <string name="wrongpassword_morethan_3times">您输错密码的次数过多，请换一张卡消费</string>
    <string name="cancel_order">取消交易</string>
    <string name="change_card">换一张卡</string>
    <string name="unknow_payment_error_with_status">%1$s[代码:%2$s]\n请重试或联系客服1010 9888</string>
    <string name="unknow_payment_default_msg">交易结果未知</string>
    <string name="faild_payment_default_msg">该笔交易失败，请您重新操作。如有其它疑问，请您联系官方客服1010 9888</string>
    <string name="error_http_exception">网络异常，请您进入“我-我的账本”查看订单最终状态</string>
    <string name="payment_status">交易状态</string>
    <string name="paying_timeout_tip">抱歉交易超时，请进入账本查看交易详情</string>
    <string name="error_code">错误码:%1$s</string>
    <string name="cardholder_copy">商户存根</string>
    <string name="merchant_copy_en">MERCHANT COPY</string>
    <string name="cardholder_copy_cn">持卡人存根</string>
    <string name="cardholder_copy_en">CARDHOLDER COPY</string>
    <string name="recipt_merchant_name">MERCHANT NAME \n商户名称</string>
    <string name="acqurer_text">ACQ\n收单行</string>
    <string name="sing_receipt_card_no">CARD NO.\n卡号</string>
    <string name="iss_text">ISS\n发卡行</string>
    <string name="receipt_merchant_id">MERCHANT NO.\n商户编号</string>
    <string name="receipt_merchant_terminal_id">TERMINAL ID\n终端编号</string>
    <string name="receipt_operator_no">OPERATOR NO.\n操作员号</string>
    <string name="trans_type_text">TRANS TYPE\n交易类型</string>
    <string name="trans_batch_no_text">BATCH NO.\n批次号</string>
    <string name="auth_no_text">AUTH NO.\n授权号</string>
    <string name="refer_no_text">REFER NO.\n参考号</string>
    <string name="back_trans_btn">撤销交易</string>
    <string name="receipt_orderno">TRACE NO.\n流水号</string>
    <string name="receipt_transaction_time">DATE/TIME\n交易日期/时间</string>
    <string name="receipt_transaction_amount">AMOUNT\n金额</string>
    <string name="receipt_cardholder_signature">CARDHOLDER SIGNATURE\n签名</string>
    <string name="receipt_remark">REFERENCE\n备注</string>
    <string name="receipt_title">签购单</string>
    <string name="back_to_home">返回主页</string>
    <string name="call_server_phone">联系客服</string>
    <string name="ok_blank">确 认</string>
    <string name="pay_success">交易成功</string>
    <string name="pay_result_unknow">交易结果未知</string>
    <string name="pay_result_unknow_try_again1">暂未获取交易结果</string>
    <string name="undo_result_unknow">撤销结果未知</string>
    <string name="tips_networkunstab">请您进入“我”->“我的账本”中查询该笔交易状态。如需帮助，请联系客服</string>
    <string name="phonenum">1010 9888</string>
    <string name="server_center">服务中心</string>
    <string name="upgrade_dialog_title">发现新版本</string>
    <string name="error_network_connection">网络连接超时,请稍候再试</string>
    <string name="undetected_avaliable_network">未检测到可用网络</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="qrcode_payment">二维码收款</string>
    <string name="please_input_idcard">请输入身份证号码（X用＊号代替）</string>
    <string name="copyright">收单服务由易生支付提供\nCopyright © 2011–2017 iBoxPay.All Rights Reserved</string>
    <string name="net_error">网络状态不佳，请稍后再试</string>
    <string name="roger">知道了</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="waiting">请稍等…</string>
    <string name="login_timeout_tip">登录超时，请重新登录</string>
    <string name="unknow">未知</string>
    <string name="auth_title">法人身份认证</string>
    <string name="input_pay_amount_intger">¥{value}</string>
    <string name="input_pay_amount_decimal">.{value}</string>
    <string name="input_pay_amount_intger_default">¥0</string>
    <string name="input_pay_amount_decimal_default">.00</string>
    <string name="receipt_enter">刷\n卡\n收\n款</string>
    <string name="service">服务</string>
    <string name="more">更多</string>
    <string name="call_server_uri">tel:10109888</string>
    <string name="pay_failure">交易失败</string>
    <string name="error_occurred">抱歉, 出错了</string>
    <string name="please_input_password">请输入登录密码</string>
    <string name="password_format_error">密码格式错误(6–20个英文字母或数字组成)</string>
    <string name="update_body">
        版本信息:\n{version_info}\n升级包大小:{package_size}\n新版本号:{new_version_number}
    </string>
    <string name="login_agreement">登录即表示同意「钱盒服务协议」</string>
    <string name="register_new_customer">注册新用户</string>
</resources>